fix: Shopping cart flow UX

--- a/erpnext/erpnext_integrations/doctype/gocardless_settings/gocardless_settings.json
+++ b/erpnext/erpnext_integrations/doctype/gocardless_settings/gocardless_settings.json
@@ -55,7 +55,7 @@
  ],
  "links": [],
  "modified": "2020-05-29 09:21:50.464471",
- "modified_by": "thierry@dokos.io",
+ "modified_by": "Administrator",
  "module": "ERPNext Integrations",
  "name": "GoCardless Settings",
  "owner": "Administrator",
