fix: Dashboard label in Projects and Assets module

--- a/erpnext/projects/desk_page/projects/projects.json
+++ b/erpnext/projects/desk_page/projects/projects.json
@@ -69,7 +69,7 @@
       "type": "Report"
      },
      {
-        "label": "Project Dashboard",
+        "label": "Dashboard",
         "link_to": "Project",
         "type": "Dashboard"
      }
