chore: cleanup erpnext links

--- a/erpnext/erpnext_integrations/doctype/shopify_settings/shopify_settings.json
+++ b/erpnext/erpnext_integrations/doctype/shopify_settings/shopify_settings.json
@@ -259,7 +259,7 @@
     ],
     "issingle": 1,
     "modified": "2020-05-28 12:32:11.384757",
-    "modified_by": "umair@erpnext.com",
+    "modified_by": "umair@dokos.io",
     "module": "ERPNext Integrations",
     "name": "Shopify Settings",
     "owner": "Administrator",
