--- a/erpnext/erpnext_integrations/doctype/stripe_settings/stripe_settings.json
+++ b/erpnext/erpnext_integrations/doctype/stripe_settings/stripe_settings.json
@@ -91,7 +91,7 @@
  ],
  "links": [],
  "modified": "2020-08-05 12:13:52.806752",
- "modified_by": "thierry@dokos.io",
+ "modified_by": "Administrator",
  "module": "ERPNext Integrations",
  "name": "Stripe Settings",
  "owner": "Administrator",
