--- a/erpnext/projects/desk_page/projects/projects.json
+++ b/erpnext/projects/desk_page/projects/projects.json
@@ -36,7 +36,7 @@
  "is_standard": 1,
  "label": "Projects",
  "modified": "2020-08-03 14:22:20.399421",
- "modified_by": "thierry@dokos.io",
+ "modified_by": "Administrator",
  "module": "Projects",
  "name": "Projects",
  "owner": "Administrator",
