--- a/erpnext/shopping_cart/doctype/shopping_cart_settings/shopping_cart_settings.json
+++ b/erpnext/shopping_cart/doctype/shopping_cart_settings/shopping_cart_settings.json
@@ -168,7 +168,7 @@
  "issingle": 1,
  "links": [],
  "modified": "2020-08-02 18:21:43.873303",
- "modified_by": "thierry@dokos.io",
+ "modified_by": "Administrator",
  "module": "Shopping Cart",
  "name": "Shopping Cart Settings",
  "owner": "Administrator",
