--- a/erpnext/erpnext_integrations/doctype/stripe_settings/stripe_settings.json
+++ b/erpnext/erpnext_integrations/doctype/stripe_settings/stripe_settings.json
@@ -12,13 +12,15 @@
   "webhook_secret_key",
   "column_break_3",
   "secret_key",
-  "section_break_5",
+  "redirection_section",
   "header_img",
   "column_break_7",
   "redirect_url",
   "failure_redirect_url",
   "bank_section",
-  "bank_account"
+  "bank_account",
+  "settings_section",
+  "subscription_cycle_on_stripe"
  ],
  "fields": [
   {
@@ -46,10 +48,6 @@
    "in_list_view": 1,
    "label": "Secret Key",
    "reqd": 1
-  },
-  {
-   "fieldname": "section_break_5",
-   "fieldtype": "Section Break"
   },
   {
    "fieldname": "header_img",
@@ -87,10 +85,27 @@
    "fieldname": "failure_redirect_url",
    "fieldtype": "Data",
    "label": "Failure redirect URL"
+  },
+  {
+   "fieldname": "settings_section",
+   "fieldtype": "Section Break",
+   "label": "Settings"
+  },
+  {
+   "fieldname": "redirection_section",
+   "fieldtype": "Section Break",
+   "label": "Redirection"
+  },
+  {
+   "default": "0",
+   "fieldname": "subscription_cycle_on_stripe",
+   "fieldtype": "Check",
+   "label": "Let Stripe handle the subscription cycle"
   }
  ],
+ "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2020-08-05 12:13:52.806752",
+ "modified": "2020-09-08 12:17:42.471634",
  "modified_by": "Administrator",
  "module": "ERPNext Integrations",
  "name": "Stripe Settings",
