--- a/erpnext/setup/desk_page/dokos_settings/dokos_settings.json
+++ b/erpnext/setup/desk_page/dokos_settings/dokos_settings.json
@@ -20,7 +20,7 @@
  "is_standard": 1,
  "label": "Dokos Settings",
  "modified": "2020-10-16 14:08:43.284775",
- "modified_by": "thierry@dokos.io",
+ "modified_by": "Administrator",
  "module": "Setup",
  "name": "Dokos Settings",
  "owner": "Administrator",
